cleaned server structure, changed main server file

--- a/views/countdown.html
+++ b/views/countdown.html
@@ -1,12 +1,12 @@
 
 <!DOCTYPE html>
-<!--  http://keith-wood.name/countdown.html
-			* Turkish initialisation for the jQuery countdown extension by Bekir Ahmetoğlu Aug 2008.  -->
+
 <html>
 	<head>
-	
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arvo|Barrio" rel="stylesheet">
+<link rel="stylesheet" href="media.css">
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
 		</script>
@@ -16,7 +16,7 @@
 
 	body{
 	  text-align: center;
-	  background: #4b5408
+/*	  background: #4b5408;*/
 	  font-family: sans-serif;
 	  font-weight: 100;
 	  overflow: hidden;
@@ -25,7 +25,7 @@
 	h1{
 	  color: #763950;
 	  font-weight: 100;
-	  font-size: 90px;
+	 
 	  font-family: 'Arvo';
 	  margin: 40px 0px 20px;
 	}
@@ -50,7 +50,6 @@
 	    display: inline-block;
 	    font-weight: 100;
 	    text-align: center;
-	    font-size: 85px;
 	    color: white;
 	    background: #763950;
 	    position: absolute;
@@ -119,10 +118,66 @@
 
 		<div id="color"></div>
 
-		<script src="js/countdown.js"></script> 
+		
 		<script>
+		
+			var d = {{tt}};
+			var d2 = Date.parse(d);
+			var d3 =  Date.parse(new Date(d));
+			console.log(d + d2 +d3 );
+			alert(d2);
+			var deadline = d;
+			console.log('deadline is:'+ deadline);
+			
 
-    
+			
+			 function getTimeRemaining(endtime) {
+	    	
+			
+			  var t = Date.parse(endtime) - Date.parse(new Date());
+			  var seconds = Math.floor((t / 1000) % 60);
+			  var minutes = Math.floor((t / 1000 / 60) % 60);
+			  var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+			  var days = Math.floor(t / (1000 * 60 * 60 * 24));
+			  return {
+			    'total': t,
+			    'days': days,
+			    'hours': hours,
+			    'minutes': minutes,
+			    'seconds': seconds
+			  };
+
+		}
+		
+		function initializeClock(id, endtime) {
+			
+			  var clock = document.getElementById(id);
+			  var daysSpan = clock.querySelector('.days');
+			  var hoursSpan = clock.querySelector('.hours');
+			  var minutesSpan = clock.querySelector('.minutes');
+			  var secondsSpan = clock.querySelector('.seconds');
+
+			  function updateClock() {
+			    var t = getTimeRemaining(endtime);
+
+			    daysSpan.innerHTML = t.days;
+			    hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+			    minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+			    secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+
+			    if (t.total <= 0) {
+			      clearInterval(timeinterval);
+			    }
+			  }
+
+			  updateClock();
+			  var timeinterval = setInterval(updateClock, 1000);
+		}
+	
+
+			window.onload = function(){
+				initializeClock('clockdiv', deadline);	
+			}
 		</script>
 	</body>
 </html>
