--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -5,7 +5,7 @@
 	body{
 		text-align: center;
 	}
-
+	
 	h1{
 	  color: #763950;
 	  font-weight: 100;
@@ -18,6 +18,28 @@
 		font-size:15px; 
 		width:80%;
 	}
+	#main {
+		top: 5%;
+	    margin-top: 4%;
+	    margin-left: 4%;
+	    width: 92%;
+	    height: 80%;
+	    position: relative;
+	    background-color: rgba(103, 50, 80, 0.59);
+	    padding-top: 7%;
+	    padding-bottom: 0%;
+	}
+	#main1{
+	margin-top: 10%;
+    margin-left: 10%;
+    width: 80%;
+    height: 80%;
+    position: inherit;
+    background-color: rgba(103, 50, 70, 0.77);
+    margin-top: 2%;
+
+	}
+
 	#createuser{
 		font-family: 'Josefin Sans', sans-serif;
 	    font-weight: 300;
@@ -64,7 +86,7 @@
 	    display: inline-block;
 	    font-weight: 100;
 	    text-align: center;
-	    font-size: 85px;
+	    /*font-size: 85px;*/
 	    color: white;
 	    background: #763950;
 	    position: absolute;
@@ -96,5 +118,6 @@
 
 	.smalltext{
 		padding-top: 5px;
-		font-size: 16px;
+	
 	}
+
